--- a/src/pages/styles.module.css
+++ b/src/pages/styles.module.css
@@ -67,12 +67,18 @@
   transform: scale(1.1); 
 }
 
-.historyContainer {
+.myInfoContainer {
   position: absolute;
-  top: 50%; 
-  left: 50%; 
-  transform: translate(-50%, -50%); 
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: black;
   z-index: 2;
+  text-align: center;
+  background-color: rgb(254, 254, 254);
+  padding: 20px;
+  border-radius: 10px;
+
 }
 
 
