--- a/src/pages/styles.module.css
+++ b/src/pages/styles.module.css
@@ -67,7 +67,7 @@
   transform: scale(1.1); 
 }
 
-.myInfoContainer {
+.myInfoContainer2 {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -78,7 +78,7 @@
   background-color: rgb(254, 254, 254);
   padding: 20px;
   border-radius: 10px;
-
+  width: 53rem;
 }
 
 
