디렉토리 구조 변경 및 sidebar 수정
디렉토리 구조 변경 및 sidebar 수정

--- a/src/pages/styles.module.css
+++ b/src/pages/styles.module.css
@@ -1,6 +1,10 @@
 /* stylelint-disable docusaurus/copyright-header */
 
 
+header h1 {
+  display: none;
+}
+
 /* 배경 이미지 */
 .backgroundImage {
   width: 100%;
