--- a/src/pages/styles.module.css
+++ b/src/pages/styles.module.css
@@ -14,10 +14,7 @@ header h1 {
 }
 
 .videoContainer {
-  aspect-ratio: 16 / 9;
-  width: 100%;
-  height: 92.4vh; 
-  overflow: hidden;
+  background-color: rgb(51, 112, 234);
 }
 
 .videoStyle {
